parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMB
    COMMENT
    DCT
    FLOAT
    FOR
    INT
    LST
    MOD
    NEWLINE
    QUOTE
    RETURN
    STR
    STRING
    TWO
    WHILE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> NAME EQUAL expression
Rule 2     statement -> NAME SPACE EQUAL SPACE expression
Rule 3     statement -> NAME SPACE EQUAL expression
Rule 4     statement -> NAME EQUAL SPACE expression
Rule 5     statement -> NAME EQUAL statement
Rule 6     statement -> NAME SPACE EQUAL SPACE statement
Rule 7     statement -> NAME SPACE EQUAL statement
Rule 8     statement -> NAME EQUAL SPACE statement
Rule 9     statement -> NAME LPAREN RPAREN
Rule 10    statement -> RCURLY
Rule 11    statement -> CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
Rule 12    statement -> NAME
Rule 13    statement -> IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
Rule 14    statement -> ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
Rule 15    statement -> ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
Rule 16    statement -> OUTPUT LPAREN expression RPAREN
Rule 17    statement -> OUTPUT LPAREN statement RPAREN
Rule 18    statement -> OUTPUT LPAREN condition RPAREN
Rule 19    statement -> TRUE
Rule 20    statement -> FALSE
Rule 21    statement -> NONE
Rule 22    expression -> expression PLUS term
Rule 23    expression -> statement PLUS expression
Rule 24    expression -> expression MINUS term
Rule 25    expression -> term
Rule 26    term -> term TIMES factor
Rule 27    term -> term DIVIDE factor
Rule 28    term -> factor
Rule 29    factor -> NUMBER
Rule 30    factor -> LPAREN expression RPAREN
Rule 31    condition -> statement MORE statement
Rule 32    condition -> statement MORE expression
Rule 33    condition -> expression MORE expression
Rule 34    condition -> statement LESS statement
Rule 35    condition -> statement LESS expression
Rule 36    condition -> expression LESS expression
Rule 37    condition -> statement MOREEQUAL statement
Rule 38    condition -> statement MOREEQUAL expression
Rule 39    condition -> expression MOREEQUAL expression
Rule 40    condition -> statement LESSEQUAL statement
Rule 41    condition -> statement LESSEQUAL expression
Rule 42    condition -> expression LESSEQUAL expression
Rule 43    condition -> statement EQUALEQUAL statement
Rule 44    condition -> statement EQUALEQUAL expression
Rule 45    condition -> expression EQUALEQUAL expression
Rule 46    condition -> statement NOTEQUAL statement
Rule 47    condition -> statement NOTEQUAL expression
Rule 48    condition -> expression NOTEQUAL expression

Terminals, with rules where they appear

ACTUATE              : 11 13 14 15
COMB                 : 
COMMENT              : 
CREATE               : 11
DCT                  : 
DIVIDE               : 27
ELF                  : 14
ELSE                 : 15
EQUAL                : 1 2 3 4 5 6 7 8
EQUALEQUAL           : 43 44 45
FALSE                : 20
FLOAT                : 
FOR                  : 
IF                   : 13
INT                  : 
LCURLY               : 11 13 14 15
LESS                 : 34 35 36
LESSEQUAL            : 40 41 42
LPAREN               : 9 11 13 13 14 14 15 16 17 18 30
LST                  : 
MINUS                : 24
MOD                  : 
MORE                 : 31 32 33
MOREEQUAL            : 37 38 39
NAME                 : 1 2 3 4 5 6 7 8 9 11 12 13 14
NEWLINE              : 
NONE                 : 21
NOTEQUAL             : 46 47 48
NUMBER               : 29
OUTPUT               : 16 17 18
PLUS                 : 22 23
QUOTE                : 
RCURLY               : 10 13 14 15
RETURN               : 
RPAREN               : 9 11 13 13 14 14 15 16 17 18 30
SPACE                : 2 2 3 4 6 6 7 8 11
STR                  : 
STRING               : 
TIMES                : 26
TRUE                 : 19
TWO                  : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

condition            : 13 14 15 18
expression           : 1 2 3 4 16 22 23 24 30 32 33 33 35 36 36 38 39 39 41 42 42 44 45 45 47 48 48
factor               : 26 27 28
statement            : 5 6 7 8 15 17 23 31 31 32 34 34 35 37 37 38 40 40 41 43 43 44 46 46 47 0
term                 : 22 24 25 26 27

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . NAME EQUAL expression
    (2) statement -> . NAME SPACE EQUAL SPACE expression
    (3) statement -> . NAME SPACE EQUAL expression
    (4) statement -> . NAME EQUAL SPACE expression
    (5) statement -> . NAME EQUAL statement
    (6) statement -> . NAME SPACE EQUAL SPACE statement
    (7) statement -> . NAME SPACE EQUAL statement
    (8) statement -> . NAME EQUAL SPACE statement
    (9) statement -> . NAME LPAREN RPAREN
    (10) statement -> . RCURLY
    (11) statement -> . CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
    (12) statement -> . NAME
    (13) statement -> . IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (14) statement -> . ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (15) statement -> . ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
    (16) statement -> . OUTPUT LPAREN expression RPAREN
    (17) statement -> . OUTPUT LPAREN statement RPAREN
    (18) statement -> . OUTPUT LPAREN condition RPAREN
    (19) statement -> . TRUE
    (20) statement -> . FALSE
    (21) statement -> . NONE

    NAME            shift and go to state 2
    RCURLY          shift and go to state 3
    CREATE          shift and go to state 4
    IF              shift and go to state 5
    ELF             shift and go to state 6
    ELSE            shift and go to state 7
    OUTPUT          shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    NONE            shift and go to state 11

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> NAME . EQUAL expression
    (2) statement -> NAME . SPACE EQUAL SPACE expression
    (3) statement -> NAME . SPACE EQUAL expression
    (4) statement -> NAME . EQUAL SPACE expression
    (5) statement -> NAME . EQUAL statement
    (6) statement -> NAME . SPACE EQUAL SPACE statement
    (7) statement -> NAME . SPACE EQUAL statement
    (8) statement -> NAME . EQUAL SPACE statement
    (9) statement -> NAME . LPAREN RPAREN
    (12) statement -> NAME .

    EQUAL           shift and go to state 12
    SPACE           shift and go to state 13
    LPAREN          shift and go to state 14
    $end            reduce using rule 12 (statement -> NAME .)
    PLUS            reduce using rule 12 (statement -> NAME .)
    MORE            reduce using rule 12 (statement -> NAME .)
    LESS            reduce using rule 12 (statement -> NAME .)
    MOREEQUAL       reduce using rule 12 (statement -> NAME .)
    LESSEQUAL       reduce using rule 12 (statement -> NAME .)
    EQUALEQUAL      reduce using rule 12 (statement -> NAME .)
    NOTEQUAL        reduce using rule 12 (statement -> NAME .)
    RPAREN          reduce using rule 12 (statement -> NAME .)
    RCURLY          reduce using rule 12 (statement -> NAME .)


state 3

    (10) statement -> RCURLY .

    $end            reduce using rule 10 (statement -> RCURLY .)
    PLUS            reduce using rule 10 (statement -> RCURLY .)
    MORE            reduce using rule 10 (statement -> RCURLY .)
    LESS            reduce using rule 10 (statement -> RCURLY .)
    MOREEQUAL       reduce using rule 10 (statement -> RCURLY .)
    LESSEQUAL       reduce using rule 10 (statement -> RCURLY .)
    EQUALEQUAL      reduce using rule 10 (statement -> RCURLY .)
    NOTEQUAL        reduce using rule 10 (statement -> RCURLY .)
    RPAREN          reduce using rule 10 (statement -> RCURLY .)
    RCURLY          reduce using rule 10 (statement -> RCURLY .)


state 4

    (11) statement -> CREATE . SPACE NAME LPAREN RPAREN ACTUATE LCURLY

    SPACE           shift and go to state 15


state 5

    (13) statement -> IF . LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY

    LPAREN          shift and go to state 16


state 6

    (14) statement -> ELF . LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY

    LPAREN          shift and go to state 17


state 7

    (15) statement -> ELSE . LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY

    LPAREN          shift and go to state 18


state 8

    (16) statement -> OUTPUT . LPAREN expression RPAREN
    (17) statement -> OUTPUT . LPAREN statement RPAREN
    (18) statement -> OUTPUT . LPAREN condition RPAREN

    LPAREN          shift and go to state 19


state 9

    (19) statement -> TRUE .

    $end            reduce using rule 19 (statement -> TRUE .)
    PLUS            reduce using rule 19 (statement -> TRUE .)
    MORE            reduce using rule 19 (statement -> TRUE .)
    LESS            reduce using rule 19 (statement -> TRUE .)
    MOREEQUAL       reduce using rule 19 (statement -> TRUE .)
    LESSEQUAL       reduce using rule 19 (statement -> TRUE .)
    EQUALEQUAL      reduce using rule 19 (statement -> TRUE .)
    NOTEQUAL        reduce using rule 19 (statement -> TRUE .)
    RPAREN          reduce using rule 19 (statement -> TRUE .)
    RCURLY          reduce using rule 19 (statement -> TRUE .)


state 10

    (20) statement -> FALSE .

    $end            reduce using rule 20 (statement -> FALSE .)
    PLUS            reduce using rule 20 (statement -> FALSE .)
    MORE            reduce using rule 20 (statement -> FALSE .)
    LESS            reduce using rule 20 (statement -> FALSE .)
    MOREEQUAL       reduce using rule 20 (statement -> FALSE .)
    LESSEQUAL       reduce using rule 20 (statement -> FALSE .)
    EQUALEQUAL      reduce using rule 20 (statement -> FALSE .)
    NOTEQUAL        reduce using rule 20 (statement -> FALSE .)
    RPAREN          reduce using rule 20 (statement -> FALSE .)
    RCURLY          reduce using rule 20 (statement -> FALSE .)


state 11

    (21) statement -> NONE .

    $end            reduce using rule 21 (statement -> NONE .)
    PLUS            reduce using rule 21 (statement -> NONE .)
    MORE            reduce using rule 21 (statement -> NONE .)
    LESS            reduce using rule 21 (statement -> NONE .)
    MOREEQUAL       reduce using rule 21 (statement -> NONE .)
    LESSEQUAL       reduce using rule 21 (statement -> NONE .)
    EQUALEQUAL      reduce using rule 21 (statement -> NONE .)
    NOTEQUAL        reduce using rule 21 (statement -> NONE .)
    RPAREN          reduce using rule 21 (statement -> NONE .)
    RCURLY          reduce using rule 21 (statement -> NONE .)


state 12

    (1) statement -> NAME EQUAL . expression
    (4) statement -> NAME EQUAL . SPACE expression
    (5) statement -> NAME EQUAL . statement
    (8) statement -> NAME EQUAL . SPACE statement
    (22) expression -> . expression PLUS term
    (23) expression -> . statement PLUS expression
    (24) expression -> . expression MINUS term
    (25) expression -> . term
    (1) statement -> . NAME EQUAL expression
    (2) statement -> . NAME SPACE EQUAL SPACE expression
    (3) statement -> . NAME SPACE EQUAL expression
    (4) statement -> . NAME EQUAL SPACE expression
    (5) statement -> . NAME EQUAL statement
    (6) statement -> . NAME SPACE EQUAL SPACE statement
    (7) statement -> . NAME SPACE EQUAL statement
    (8) statement -> . NAME EQUAL SPACE statement
    (9) statement -> . NAME LPAREN RPAREN
    (10) statement -> . RCURLY
    (11) statement -> . CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
    (12) statement -> . NAME
    (13) statement -> . IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (14) statement -> . ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (15) statement -> . ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
    (16) statement -> . OUTPUT LPAREN expression RPAREN
    (17) statement -> . OUTPUT LPAREN statement RPAREN
    (18) statement -> . OUTPUT LPAREN condition RPAREN
    (19) statement -> . TRUE
    (20) statement -> . FALSE
    (21) statement -> . NONE
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . LPAREN expression RPAREN

    SPACE           shift and go to state 21
    NAME            shift and go to state 2
    RCURLY          shift and go to state 3
    CREATE          shift and go to state 4
    IF              shift and go to state 5
    ELF             shift and go to state 6
    ELSE            shift and go to state 7
    OUTPUT          shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    NONE            shift and go to state 11
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 24

    expression                     shift and go to state 20
    statement                      shift and go to state 22
    term                           shift and go to state 23
    factor                         shift and go to state 25

state 13

    (2) statement -> NAME SPACE . EQUAL SPACE expression
    (3) statement -> NAME SPACE . EQUAL expression
    (6) statement -> NAME SPACE . EQUAL SPACE statement
    (7) statement -> NAME SPACE . EQUAL statement

    EQUAL           shift and go to state 27


state 14

    (9) statement -> NAME LPAREN . RPAREN

    RPAREN          shift and go to state 28


state 15

    (11) statement -> CREATE SPACE . NAME LPAREN RPAREN ACTUATE LCURLY

    NAME            shift and go to state 29


state 16

    (13) statement -> IF LPAREN . condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (31) condition -> . statement MORE statement
    (32) condition -> . statement MORE expression
    (33) condition -> . expression MORE expression
    (34) condition -> . statement LESS statement
    (35) condition -> . statement LESS expression
    (36) condition -> . expression LESS expression
    (37) condition -> . statement MOREEQUAL statement
    (38) condition -> . statement MOREEQUAL expression
    (39) condition -> . expression MOREEQUAL expression
    (40) condition -> . statement LESSEQUAL statement
    (41) condition -> . statement LESSEQUAL expression
    (42) condition -> . expression LESSEQUAL expression
    (43) condition -> . statement EQUALEQUAL statement
    (44) condition -> . statement EQUALEQUAL expression
    (45) condition -> . expression EQUALEQUAL expression
    (46) condition -> . statement NOTEQUAL statement
    (47) condition -> . statement NOTEQUAL expression
    (48) condition -> . expression NOTEQUAL expression
    (1) statement -> . NAME EQUAL expression
    (2) statement -> . NAME SPACE EQUAL SPACE expression
    (3) statement -> . NAME SPACE EQUAL expression
    (4) statement -> . NAME EQUAL SPACE expression
    (5) statement -> . NAME EQUAL statement
    (6) statement -> . NAME SPACE EQUAL SPACE statement
    (7) statement -> . NAME SPACE EQUAL statement
    (8) statement -> . NAME EQUAL SPACE statement
    (9) statement -> . NAME LPAREN RPAREN
    (10) statement -> . RCURLY
    (11) statement -> . CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
    (12) statement -> . NAME
    (13) statement -> . IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (14) statement -> . ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (15) statement -> . ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
    (16) statement -> . OUTPUT LPAREN expression RPAREN
    (17) statement -> . OUTPUT LPAREN statement RPAREN
    (18) statement -> . OUTPUT LPAREN condition RPAREN
    (19) statement -> . TRUE
    (20) statement -> . FALSE
    (21) statement -> . NONE
    (22) expression -> . expression PLUS term
    (23) expression -> . statement PLUS expression
    (24) expression -> . expression MINUS term
    (25) expression -> . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . LPAREN expression RPAREN

    NAME            shift and go to state 2
    RCURLY          shift and go to state 3
    CREATE          shift and go to state 4
    IF              shift and go to state 5
    ELF             shift and go to state 6
    ELSE            shift and go to state 7
    OUTPUT          shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    NONE            shift and go to state 11
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 24

    condition                      shift and go to state 30
    statement                      shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 23
    factor                         shift and go to state 25

state 17

    (14) statement -> ELF LPAREN . condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (31) condition -> . statement MORE statement
    (32) condition -> . statement MORE expression
    (33) condition -> . expression MORE expression
    (34) condition -> . statement LESS statement
    (35) condition -> . statement LESS expression
    (36) condition -> . expression LESS expression
    (37) condition -> . statement MOREEQUAL statement
    (38) condition -> . statement MOREEQUAL expression
    (39) condition -> . expression MOREEQUAL expression
    (40) condition -> . statement LESSEQUAL statement
    (41) condition -> . statement LESSEQUAL expression
    (42) condition -> . expression LESSEQUAL expression
    (43) condition -> . statement EQUALEQUAL statement
    (44) condition -> . statement EQUALEQUAL expression
    (45) condition -> . expression EQUALEQUAL expression
    (46) condition -> . statement NOTEQUAL statement
    (47) condition -> . statement NOTEQUAL expression
    (48) condition -> . expression NOTEQUAL expression
    (1) statement -> . NAME EQUAL expression
    (2) statement -> . NAME SPACE EQUAL SPACE expression
    (3) statement -> . NAME SPACE EQUAL expression
    (4) statement -> . NAME EQUAL SPACE expression
    (5) statement -> . NAME EQUAL statement
    (6) statement -> . NAME SPACE EQUAL SPACE statement
    (7) statement -> . NAME SPACE EQUAL statement
    (8) statement -> . NAME EQUAL SPACE statement
    (9) statement -> . NAME LPAREN RPAREN
    (10) statement -> . RCURLY
    (11) statement -> . CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
    (12) statement -> . NAME
    (13) statement -> . IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (14) statement -> . ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (15) statement -> . ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
    (16) statement -> . OUTPUT LPAREN expression RPAREN
    (17) statement -> . OUTPUT LPAREN statement RPAREN
    (18) statement -> . OUTPUT LPAREN condition RPAREN
    (19) statement -> . TRUE
    (20) statement -> . FALSE
    (21) statement -> . NONE
    (22) expression -> . expression PLUS term
    (23) expression -> . statement PLUS expression
    (24) expression -> . expression MINUS term
    (25) expression -> . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . LPAREN expression RPAREN

    NAME            shift and go to state 2
    RCURLY          shift and go to state 3
    CREATE          shift and go to state 4
    IF              shift and go to state 5
    ELF             shift and go to state 6
    ELSE            shift and go to state 7
    OUTPUT          shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    NONE            shift and go to state 11
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 24

    condition                      shift and go to state 33
    statement                      shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 23
    factor                         shift and go to state 25

state 18

    (15) statement -> ELSE LPAREN . condition RPAREN ACTUATE LCURLY statement RCURLY
    (31) condition -> . statement MORE statement
    (32) condition -> . statement MORE expression
    (33) condition -> . expression MORE expression
    (34) condition -> . statement LESS statement
    (35) condition -> . statement LESS expression
    (36) condition -> . expression LESS expression
    (37) condition -> . statement MOREEQUAL statement
    (38) condition -> . statement MOREEQUAL expression
    (39) condition -> . expression MOREEQUAL expression
    (40) condition -> . statement LESSEQUAL statement
    (41) condition -> . statement LESSEQUAL expression
    (42) condition -> . expression LESSEQUAL expression
    (43) condition -> . statement EQUALEQUAL statement
    (44) condition -> . statement EQUALEQUAL expression
    (45) condition -> . expression EQUALEQUAL expression
    (46) condition -> . statement NOTEQUAL statement
    (47) condition -> . statement NOTEQUAL expression
    (48) condition -> . expression NOTEQUAL expression
    (1) statement -> . NAME EQUAL expression
    (2) statement -> . NAME SPACE EQUAL SPACE expression
    (3) statement -> . NAME SPACE EQUAL expression
    (4) statement -> . NAME EQUAL SPACE expression
    (5) statement -> . NAME EQUAL statement
    (6) statement -> . NAME SPACE EQUAL SPACE statement
    (7) statement -> . NAME SPACE EQUAL statement
    (8) statement -> . NAME EQUAL SPACE statement
    (9) statement -> . NAME LPAREN RPAREN
    (10) statement -> . RCURLY
    (11) statement -> . CREATE SPACE NAME LPAREN RPAREN ACTUATE LCURLY
    (12) statement -> . NAME
    (13) statement -> . IF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (14) statement -> . ELF LPAREN condition RPAREN ACTUATE LCURLY NAME LPAREN RPAREN RCURLY
    (15) statement -> . ELSE LPAREN condition RPAREN ACTUATE LCURLY statement RCURLY
    (16) statement -> . OUTPUT LPAREN expression RPAREN
    (17) statement -> . OUTPUT LPAREN statement RPAREN
    (18) statement -> . OUTPUT LPAREN condition RPAREN
    (19) statement -> . TRUE
    (20) statement -> . FALSE
    (21) statement -> . NONE
    (22) expression -> . expression PLUS term
    (23) expression -> . statement PLUS expression
    (24) expression -> . expression MINUS term
    (25) expression -> . term
    (26) term -> . term TIMES factor
    (27) term -> . term DIVIDE factor
    (28) term -> . factor
    (29) factor -> . NUMBER
    (30) factor -> . LPAREN expression RPAREN

    NAME            shift and go to state 2
    RCURLY          shift and go to state 3
    CREATE          shift and go to state 4
    IF              shift and go to state 5
    ELF             shift and go to state 6
    ELSE            shift and go to state 7
    OUTPUT          shift and go to state 8
    TRUE            shift and go to state 9
    FALSE           shift and go to state 10
    NONE            shift and go to state 11
    NUMBER          shift and go to state 26
    LPAREN          shift and go to state 24

    condition                      shift and go to state 34
    statement                      shift and go to state 31
    expression                     shift and go to state 32
    term                           shift and go to state 23
    factor                         shift and go to state 25

state 19
